--- a/languages/wk-google-analytics-de_DE_formal.po
+++ b/languages/wk-google-analytics-de_DE_formal.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Google Analytics by WebKinder\n"
-"POT-Creation-Date: 2018-05-24 15:59+0200\n"
-"PO-Revision-Date: 2018-05-24 15:59+0200\n"
+"POT-Creation-Date: 2018-05-28 14:30+0200\n"
+"PO-Revision-Date: 2018-05-28 14:30+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: de_DE@formal\n"
@@ -21,11 +21,11 @@ msgstr ""
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.js\n"
 
-#: Classes/Loader.php:143
+#: Classes/Loader.php:129
 msgid "Do not track any visits from this device."
 msgstr ""
 
-#: Classes/Plugin.php:53
+#: Classes/Plugin.php:59
 msgid "Donate to this plugin"
 msgstr ""
 
@@ -61,6 +61,15 @@ msgstr ""
 msgid ""
 "Enter your Google Analytics tracking code below. You can also use Google Tag "
 "Manager instead by checking the relevant setting."
+msgstr ""
+"Diese Einstellung gilt nur für Google Analytics. Falls Google Tag Manager "
+"genutzt wird, muss die Einstellung im Google Tag Manager Konto gesetzt "
+"werden."
+
+#: Classes/Settings.php:215
+msgid ""
+"This setting is only for Google Analytics. If you use GTM please set this "
+"setting in your GTM account."
 msgstr ""
 
 #: Config/EnvironmentChecksConfig.php:6
