--- a/languages/wk-google-analytics.pot
+++ b/languages/wk-google-analytics.pot
@@ -3,14 +3,14 @@ msgid ""
 msgstr ""
 "Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
 "Project-Id-Version: Google Analytics by WebKinder\n"
-"POT-Creation-Date: 2018-05-30 17:01+0200\n"
-"PO-Revision-Date: 2018-05-28 15:55+0200\n"
+"POT-Creation-Date: 2018-06-02 14:17+0200\n"
+"PO-Revision-Date: 2018-06-02 14:16+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.6\n"
+"X-Generator: Poedit 2.0.7\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-Flags-xgettext: --add-comments=translators:\n"
 "X-Poedit-WPHeader: wk-ga.php\n"
@@ -25,7 +25,7 @@ msgstr ""
 msgid "Do not track any visits from this device."
 msgstr ""
 
-#: Classes/Plugin.php:60
+#: Classes/Plugin.php:59
 msgid "Donate to this plugin"
 msgstr ""
 
@@ -176,4 +176,24 @@ msgstr ""
 
 #: includes/mailchimp-form.php:33
 msgid "Subscribe"
+msgstr ""
+
+#. Plugin Name of the plugin/theme
+msgid "Google Analytics by WebKinder"
+msgstr ""
+
+#. Plugin URI of the plugin/theme
+msgid "https://wordpress.org/plugins/wk-google-analytics/"
+msgstr ""
+
+#. Description of the plugin/theme
+msgid "Google Analytics for WordPress without tracking your own visits"
+msgstr ""
+
+#. Author of the plugin/theme
+msgid "WebKinder"
+msgstr ""
+
+#. Author URI of the plugin/theme
+msgid "https://www.webkinder.ch"
 msgstr ""
