--- a/languages/wk-google-analytics.pot
+++ b/languages/wk-google-analytics.pot
@@ -3,14 +3,14 @@ msgid ""
 msgstr ""
 "Plural-Forms: nplurals=INTEGER; plural=EXPRESSION;\n"
 "Project-Id-Version: Google Analytics by WebKinder\n"
-"POT-Creation-Date: 2018-06-02 14:17+0200\n"
-"PO-Revision-Date: 2018-06-02 14:16+0200\n"
+"POT-Creation-Date: 2020-10-19 14:58+0000\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 2.0.7\n"
+"X-Generator: Loco https://localise.biz/\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-Flags-xgettext: --add-comments=translators:\n"
 "X-Poedit-WPHeader: wk-ga.php\n"
@@ -20,64 +20,13 @@ msgstr ""
 "_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.js\n"
+"Language: "
 
-#: Classes/Loader.php:129
-msgid "Do not track any visits from this device."
-msgstr ""
-
-#: Classes/Plugin.php:59
-msgid "Donate to this plugin"
-msgstr ""
-
-#: Classes/Settings.php:43
-msgid "Test your tracking code now!"
-msgstr ""
-
-#: Classes/Settings.php:79 Content/privacy_policy.php:1
+#: content/privacy_policy.php:1
 msgid "Google Analytics"
 msgstr ""
 
-#: Classes/Settings.php:94
-msgid "GA Tracking Code"
-msgstr ""
-
-#: Classes/Settings.php:110
-msgid "Anonymize IP\"s"
-msgstr ""
-
-#: Classes/Settings.php:126
-msgid "Track logged in users"
-msgstr ""
-
-#: Classes/Settings.php:142
-msgid "Use Google Tag Manager instead"
-msgstr ""
-
-#: Classes/Settings.php:158
-msgid "Google Tag Manager ID"
-msgstr ""
-
-#: Classes/Settings.php:176
-msgid ""
-"Enter your Google Analytics tracking code below. You can also use Google Tag "
-"Manager instead by checking the relevant setting."
-msgstr ""
-
-#: Classes/Settings.php:216
-msgid ""
-"This setting is only for Google Analytics. If you use GTM please set this "
-"setting in your GTM account."
-msgstr ""
-
-#: Config/EnvironmentChecksConfig.php:6
-msgid "WebKinder Google Analytics needs PHP version 5.3 to run."
-msgstr ""
-
-#: Config/EnvironmentChecksConfig.php:11
-msgid "WebKinder Google Analytics needs WordPress version 4.8 to run."
-msgstr ""
-
-#: Content/privacy_policy.php:3
+#: content/privacy_policy.php:3
 msgid ""
 "Based on our legitimate interests (i.e., interest in the analysis, "
 "optimization, and economic operation of our online offer within the meaning "
@@ -87,15 +36,15 @@ msgid ""
 "usually transmitted to a Google server in the USA and stored there."
 msgstr ""
 
-#: Content/privacy_policy.php:4
+#: content/privacy_policy.php:4
 msgid ""
 "Google is certified under the Privacy Shield Agreement, which provides a "
 "guarantee to comply with European privacy legislation (<a href=\"https://www."
-"privacyshield.gov/participant?id=a2zt000000001L5AAI&status=Active\">https://"
-"www.privacyshield.gov/participant?id=a2zt000000001L5AAI&status=Active</a>)."
+"privacyshield.gov/participant?id=a2zt000000001L5AAI&status=Active\">https:"
+"//www.privacyshield.gov/participant?id=a2zt000000001L5AAI&status=Active</a>)."
 msgstr ""
 
-#: Content/privacy_policy.php:5
+#: content/privacy_policy.php:5
 msgid ""
 "Google will use this information on our behalf to evaluate the use of our "
 "online offer by users to compile reports on the activities within this "
@@ -104,7 +53,7 @@ msgid ""
 "profiles of the users can be created from the processed data."
 msgstr ""
 
-#: Content/privacy_policy.php:6
+#: content/privacy_policy.php:6
 msgid ""
 "We only use Google Analytics with activated IP anonymization. This means "
 "that the IP address of the users will be shortened by Google within member "
@@ -113,7 +62,7 @@ msgid ""
 "address be sent to a Google server in the USA and shortened there."
 msgstr ""
 
-#: Content/privacy_policy.php:7
+#: content/privacy_policy.php:7
 msgid ""
 "The IP address submitted by the user's browser will not be merged with other "
 "data provided by Google. Users can prevent the storage of cookies by setting "
@@ -125,26 +74,26 @@ msgid ""
 "com/dlpage/gaoptout?hl=en</a>."
 msgstr ""
 
-#: Content/privacy_policy.php:8
+#: content/privacy_policy.php:8
 msgid ""
-"For more information about Google's data usage, settings and opt-out "
-"options, please visit Google's websites: <a href=\"https://www.google.com/"
-"intl/en/policies/privacy/partners\">https://www.google.com/intl/en/policies/"
-"privacy/partners</a> (\"Google's use of your data when you use websites or "
-"apps of our partners\"), <a href=\"https://policies.google.com/technologies/"
-"ads\">https://policies.google.com/technologies/ads</a> (\"Advertising use of "
-"data\"), <a href=\"https://adssettings.google.com/authenticated\">https://"
-"adssettings.google.com/authenticated</a> (\"Managing information Google uses "
-"to show you ads\")."
+"For more information about Google's data usage, settings and opt-out options,"
+" please visit Google's websites: <a href=\"https://www.google."
+"com/intl/en/policies/privacy/partners\">https://www.google."
+"com/intl/en/policies/privacy/partners</a> (\"Google's use of your data when "
+"you use websites or apps of our partners\"), <a href=\"https://policies."
+"google.com/technologies/ads\">https://policies.google."
+"com/technologies/ads</a> (\"Advertising use of data\"), <a href=\"https:"
+"//adssettings.google.com/authenticated\">https://adssettings.google."
+"com/authenticated</a> (\"Managing information Google uses to show you ads\")."
 msgstr ""
 
-#: Content/privacy_policy.php:9
+#: content/privacy_policy.php:9
 msgid ""
 "Incidentally, the personal data will be anonymized or deleted after a lapse "
 "of 26 months."
 msgstr ""
 
-#: Content/privacy_policy.php:11
+#: content/privacy_policy.php:11
 msgid "Opt-out for Google Analytics"
 msgstr ""
 
@@ -178,22 +127,65 @@ msgstr ""
 msgid "Subscribe"
 msgstr ""
 
-#. Plugin Name of the plugin/theme
-msgid "Google Analytics by WebKinder"
+#: lib/Loader.php:155
+msgid "Do not track any visits from this device."
 msgstr ""
 
-#. Plugin URI of the plugin/theme
+#: lib/Plugin.php:66
+msgid "Donate to this plugin"
+msgstr ""
+
+#: lib/Settings.php:43
+msgid "Test your tracking code now!"
+msgstr ""
+
+#: lib/Settings.php:110
+msgid "Anonymize IP\"s"
+msgstr ""
+
+#: lib/Settings.php:126
+msgid "Track logged in users"
+msgstr ""
+
+#: lib/Settings.php:142
+msgid "Use Google Tag Manager instead"
+msgstr ""
+
+#: lib/Settings.php:158
+msgid "Google Tag Manager ID"
+msgstr ""
+
+#: lib/Settings.php:176
+msgid ""
+"Enter your Google Analytics tracking code below. You can also use Google Tag "
+"Manager instead by checking the relevant setting."
+msgstr ""
+
+#: lib/Settings.php:216
+msgid ""
+"This setting is only for Google Analytics. If you use GTM please set this "
+"setting in your GTM account."
+msgstr ""
+
+#. Name of the plugin
+msgid "Google Analytics and Google Tag Manager by WebKinder"
+msgstr ""
+
+#. Description of the plugin
+msgid ""
+"Enable Google Analytics on all pages without tracking your own visits. You "
+"can exclude any logged in user as well as ignore a device completely by "
+"setting a cookie."
+msgstr ""
+
+#. URI of the plugin
 msgid "https://wordpress.org/plugins/wk-google-analytics/"
 msgstr ""
 
-#. Description of the plugin/theme
-msgid "Google Analytics for WordPress without tracking your own visits"
-msgstr ""
-
-#. Author of the plugin/theme
+#. Author of the plugin
 msgid "WebKinder"
 msgstr ""
 
-#. Author URI of the plugin/theme
+#. Author URI of the plugin
 msgid "https://www.webkinder.ch"
 msgstr ""
