--- a/languages/wk-google-analytics-de_CH.po
+++ b/languages/wk-google-analytics-de_CH.po
@@ -1,8 +1,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Google Analytics by WebKinder\n"
-"POT-Creation-Date: 2020-10-19 14:58+0000\n"
-"PO-Revision-Date: 2020-10-19 15:02+0000\n"
+"POT-Creation-Date: 2020-11-02 15:04+0000\n"
+"PO-Revision-Date: 2020-11-02 15:08+0000\n"
 "Last-Translator: \n"
 "Language-Team: Deutsch (Schweiz)\n"
 "Language: de_CH\n"
@@ -21,7 +21,7 @@ msgstr ""
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.js\n"
 "Report-Msgid-Bugs-To: \n"
-"X-Loco-Version: 2.4.3; wp-5.5.1"
+"X-Loco-Version: 2.4.3; wp-5.5.3"
 
 #: content/privacy_policy.php:1
 msgid "Google Analytics"
@@ -143,84 +143,107 @@ msgstr ""
 msgid "Opt-out for Google Analytics"
 msgstr "Opt-out für Google Analytics"
 
-#: includes/mailchimp-form.php:11
-msgid "Stay updated on this plugin"
+#: includes/mailchimp-form.php:13
+msgid "Stay informed about any changes to this plugin"
 msgstr "Erfahre das Wichtigste über jedes Update"
 
-#: includes/mailchimp-form.php:13
-msgid "Email Address"
-msgstr "Email Adresse"
+#: includes/mailchimp-form.php:15
+#| msgid "Email Address"
+msgid "Email address"
+msgstr "E-Mail-Adresse"
 
-#: includes/mailchimp-form.php:17
-msgid "First Name"
+#: includes/mailchimp-form.php:20
+#| msgid "First Name"
+msgid "First name"
 msgstr "Vorname"
 
-#: includes/mailchimp-form.php:21
-msgid "Last Name"
+#: includes/mailchimp-form.php:25
+#| msgid "Last Name"
+msgid "Last name"
 msgstr "Nachname"
 
-#: includes/mailchimp-form.php:25
-#, fuzzy
+#: includes/mailchimp-form.php:30
 msgid "Permission"
-msgstr "Zustimmung"
+msgstr "Erlaubnis"
 
-#: includes/mailchimp-form.php:26
+#: includes/mailchimp-form.php:32
 msgid ""
-"I agree to my personal data being stored, used for distribution and to "
-"receive plugin news."
+"I agree that my personal data will be stored and used to send plugin updates "
+"to my email address."
 msgstr ""
-"Ich erkläre mich bereit, das Personenbezogene Daten gespeichert, zur "
+"Ich bin damit einverstanden, dass personenbezogene Daten gespeichert, zur "
 "Distribution sowie für den Versand von Plugin-Neuigkeiten genutzt werden."
 
-#: includes/mailchimp-form.php:33
+#: includes/mailchimp-form.php:43
 msgid "Subscribe"
 msgstr "Abonnieren"
 
 #: lib/Loader.php:155
-msgid "Do not track any visits from this device."
+#| msgid "Do not track any visits from this device."
+msgid "Do not track any visits from this device"
 msgstr "Keine Besuche von diesem Gerät tracken."
 
-#: lib/Plugin.php:66
+#: lib/Loader.php:156
+msgid ""
+"As long as you do not activate this option while you are using the incognito "
+"mode of your browser, a cookie will be stored on your device. This cookie "
+"will have to be renewed after one year."
+msgstr ""
+"Solange du diese Option nicht im Inkognito Modus deines Browsers aktivierst, "
+"wird ein Cookie auf deinem Gerät gesetzt. Dieses Cookie muss in einem Jahr "
+"neu gesetzt werden."
+
+#: lib/Plugin.php:71
 msgid "Donate to this plugin"
 msgstr "Spenden um das Plugin zu unterstützen."
 
-#: lib/Settings.php:43
+#: lib/Settings.php:46
 msgid "Test your tracking code now!"
 msgstr "Teste deinen Tracking Code jetzt!"
 
-#: lib/Settings.php:110
-msgid "Anonymize IP\"s"
+#: lib/Settings.php:96
+msgid "Google Analytics Tracking ID"
+msgstr "Google Analytics Tracking ID"
+
+#: lib/Settings.php:112
+msgid "IP Anonymization"
 msgstr "IP Anonymisierung"
 
-#: lib/Settings.php:126
+#: lib/Settings.php:128
 msgid "Track logged in users"
 msgstr "Eingeloggte Benutzer tracken"
 
-#: lib/Settings.php:142
+#: lib/Settings.php:144
 msgid "Use Google Tag Manager instead"
 msgstr "Google Tag Manager verwenden"
 
-#: lib/Settings.php:158
+#: lib/Settings.php:160
 msgid "Google Tag Manager ID"
 msgstr "Google Tag Manager ID"
 
-#: lib/Settings.php:176
+#: lib/Settings.php:180
 msgid ""
-"Enter your Google Analytics tracking code below. You can also use Google Tag "
-"Manager instead by checking the relevant setting."
+"Enter your Google Analytics tracking ID below. Should you use Google Tag "
+"Manager to deploy Google Analytics, enter your GTM Container ID in the "
+"respective field and tick the box “Use Google Tag Manager instead”."
 msgstr ""
-"Gib deinen Google Analytics Tracking Code unten ein. Alternativ kann auch "
-"Google Tag Manager verwendet werden, indem das entsprechende Setting gesetzt "
-"wird."
+"Benutzt du Google Analytics, dann gib deine Google Analytics Tracking ID im "
+"gleichnamigen Feld ein. Analytics IDs haben das Format UA-XXXXXXXX-XX. Falls "
+"du Analytics via Google Tag Manager einbindest, kannst du deine Google Tag "
+"Manager ID im gleichnamigen Feld eingeben und ein Häkchen beim Feld “Google "
+"Tag Manager verwenden setzen”."
 
-#: lib/Settings.php:216
+#: lib/Settings.php:224
 msgid ""
-"This setting is only for Google Analytics. If you use GTM please set this "
-"setting in your GTM account."
+"This setting is only effective if you use Google Analytics. If you use "
+"Google Tag Manager to deploy Google Analytics, you have to enable <a "
+"href=\"https://support.google.com/analytics/answer/2763052?hl=de\" "
+"target=\"_blank\">IP Anonymization</a> in your GTM settings."
 msgstr ""
-"Diese Einstellung gilt nur für Google Analytics. Falls Google Tag Manager "
-"genutzt wird, muss die Einstellung im Google Tag Manager Konto gesetzt "
-"werden."
+"Diese Einstellung gilt nur für Google Analytics. Falls der Google Tag "
+"Manager benutzt wird, muss die <a href=\"https://support.google."
+"com/analytics/answer/2763052?hl=de\" target=\"_blank\">IP-Anonymisierung</a> "
+"im Google Tag Manager Konto gesetzt werden."
 
 #. Name of the plugin
 msgid "Google Analytics and Google Tag Manager by WebKinder"
@@ -228,13 +251,10 @@ msgstr "Google Analytics und Google Tag Manager by WebKinder"
 
 #. Description of the plugin
 msgid ""
-"Enable Google Analytics on all pages without tracking your own visits. You "
-"can exclude any logged in user as well as ignore a device completely by "
-"setting a cookie."
-msgstr ""
-"Aktiviere Google Analytics auf allen Seiten, ohne deine eigenen Besuche zu "
-"verfolgen. Du kannst jeden eingeloggten Nutzer ausschliessen sowie ein Gerät "
-"vollständig ignorieren, indem du ein Cookie setzt."
+"Deploy Google Analytics on your website without having to edit code and "
+"without tracking your own visits. You can exclude any logged in user from "
+"this and enable tracking solely for them."
+msgstr "Google Analytics für WordPress, ohne die eigenen Besuche zu tracken."
 
 #. URI of the plugin
 msgid "https://wordpress.org/plugins/wk-google-analytics/"
